# bug-triage

./: README.md  pyproject.toml
bug_triage/: __init__.py  cli.py  fetcher.py  llm_client.py  models.py  reporter.py  triage.py
bug_triage/prompts/: complexity_prompt.j2  triage_prompt.j2
tests/: test_fetcher.py  test_reporter.py  test_triage.py
tests/fixtures/: sample_issues.json
