[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bug-triage"
version = "0.1.0"
description = "AI-powered bug triage CLI tool that classifies, deduplicates, and prioritizes GitHub issues using LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Bug Triage Contributors" }
]
keywords = ["bug", "triage", "github", "llm", "openai", "anthropic", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Utilities",
]
dependencies = [
  "typer[all]>=0.12.0",
  "rich>=13.0.0",
  "openai>=1.0.0",
  "anthropic>=0.25.0",
  "PyGithub>=2.0.0",
  "jinja2>=3.1.0",
  "pydantic>=2.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0",
]

[project.scripts]
bug-triage = "bug_triage.cli:app"

[project.urls]
Homepage = "https://github.com/example/bug-triage"
Repository = "https://github.com/example/bug-triage"
Issues = "https://github.com/example/bug-triage/issues"

[tool.hatch.build.targets.wheel]
packages = ["bug_triage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
